# Arcgentic

./: .gitignore  CLAUDE-v0.1.0-handoff.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  plugin.json
.githooks/: pre-commit
agents/: auditor.md  ba-designer.md  cr-reviewer.md  developer.md  orchestrator.md  planner.md  se-contract.md
docs/: tech-debt.md
docs/audits/: v0.1.0-alpha.2-meta-external-audit-verdict.md
docs/examples/: state.example.yaml
docs/plans/: 2026-05-12-arcgentic-mvp-plan.md  2026-05-13-arcgentic-v0.2.0-spec-amendment-01-layout.md  2026-05-13-arcgentic-v0.2.0-spec.md  v0.1.0-alpha.2-meta-handoff.md
schema/: state.schema.json
scripts/: install-hooks.sh  test-helpers.sh
scripts/gates/: handoff-doc-gate.sh  handoff-doc-gate.test.sh  round-commit-chain-gate.sh  round-commit-chain-gate.test.sh  verdict-fact-table-gate.sh  verdict-fact-table-gate.test.sh
templates/: ba_design.md  external_audit_verdict.md  handoff_10_section.md  handoff_12_section.md  handoff_18_section.md  self_audit_handoff.md
toolkit/: README.md  pyproject.toml
toolkit/src/arcgentic/: __init__.py  audit_check.py  cli.py
toolkit/src/arcgentic/adapters/: __init__.py  _local_env.py  base.py  claude_code.py  codex_cli.py  cursor.py  inline.py  vscode_codex.py
toolkit/src/arcgentic/hooks/: __init__.py  quality_gate_enforce.py
toolkit/src/arcgentic/skills_impl/: __init__.py  execute_round.py  plan_round.py
toolkit/tests/fixtures/: sample_self_audit.md
toolkit/tests/integration/: test_end_to_end_round.py
toolkit/tests/unit/: test_audit_check.py  test_cli.py
toolkit/tests/unit/adapters/: test_base.py  test_claude_code.py  test_codex_cli.py  test_cursor.py  test_detect.py  test_inline.py  test_local_env.py  test_vscode_codex.py
toolkit/tests/unit/hooks/: test_quality_gate_enforce.py
toolkit/tests/unit/skills_impl/: test_execute_round.py  test_plan_round.py
(+38 files in other folders)
